Update as of 3/28/2025

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,14 @@
-<h1>{{ title }}</h1>
-<h4>{{ bannerText }}</h4>
+<div class="app-container">
+  <header>
+    <h1 class="brand">CAR-O-SELL</h1>
+    <p class="tagline">Your Premium Car Showcase</p>
+  </header>
+
+  <main>
+    <router-outlet></router-outlet>
+  </main>
+
+  <footer>
+    <p>© 2023 CAR-O-SELL. All rights reserved.</p>
+  </footer>
+</div>
